<resources>
    <string name="app_name">TodoList</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="add_now">Add Now</string>
    <string name="discard">Discard</string>
    <string name="proceed">Proceed</string>
    <string name="youtube_videos">Youtube Videos</string>
    <string name="how_to_use_rest_api">How to use REST API</string>
    <string name="_07_07_20">07-07-2110</string>
    <string name="stay">Stay</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign In</string>
    <string name="pref_previously_started" />
    <!--    <string name="default_web_client_id">default_web_client_id</string>-->
</resources>
