<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"
    android:background="#fff"
    android:elevation="20dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:textSize="22dp"
            android:text="@string/youtube_videos"
            android:textColor="#000C5D"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/todo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/how_to_use_rest_api"
            android:layout_marginTop="8dp"
            android:textColor="#ADADAD"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="75dp">

        <TextView
            android:id="@+id/todo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="#F63EA5"
            android:drawableTop="8dp"
            android:text="@string/_07_07_20"/>

    </LinearLayout>

</LinearLayout>
