<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addtaskbg"
    tools:context=".AddTask">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:translationX="-115dp"
        android:translationY="-140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/title"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/backBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/titleLay">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/datetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Date"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/displayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="00-00-00"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/datetxt" />

        <ImageView
            android:id="@+id/datePicker_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintRight_toRightOf="@id/displayDate"
            app:layout_constraintTop_toBottomOf="@id/datetxt" />

        <TextView
            android:id="@+id/reminder_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Reminder"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/displayDate" />

        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:checked="true"
            app:layout_constraintRight_toRightOf="@id/displayDate"
            app:layout_constraintTop_toBottomOf="@id/displayDate" />

        <Button
            android:id="@+id/addNow"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_radius"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:elevation="10dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/add_now"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminder_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:translationX="115dp"
        android:translationY="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>